--- a/templates/answer.html
+++ b/templates/answer.html
@@ -12,6 +12,7 @@
 
 {% block content %}
 <div class="container justify-content-center">
+    <!--suppress HtmlUnknownTarget -->
     <img class="bi me-2" src="{{url_for('static', filename='img/questionmark.png')}}"
          alt="Questionmark" width="40" height="60">
 </div>
