--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--suppress HtmlUnknownTarget -->
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
     <title>Home - Answer Machine</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,6 +17,7 @@
     <div class="row justify-content-md-center">
         <div class="col col-lg-2">&nbsp;</div>
         <div class="col-md-auto">
+            <!--suppress HtmlUnknownTarget -->
             <a class="btn btn-dark btn-lg" href="{{url_for('profile')}}">Anmelden</a>
         </div>
         <div class="col col-lg-2">&nbsp;</div>
