--- a/templates/import.html
+++ b/templates/import.html
@@ -11,6 +11,7 @@
 {% endblock %}
 
 {% block content %}
+<!--suppress HtmlUnknownTarget -->
 <form action="{{url_for('upload')}}" method="POST" enctype="multipart/form-data">
     <div class="mb-3">
         <label for="file_upload" class="form-label">Lade ein <strong>neues Dokument</strong> hoch:</label>
