--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
     {% block head %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--suppress HtmlUnknownTarget -->
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
     <title>{% block title %}{% endblock %} - Answer Machine</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,18 +17,23 @@
     <div class="container-fluid">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
+                <!--suppress HtmlUnknownTarget -->
                 <a class="nav-link" href="{{url_for('answer')}}">Answer</a>
             </li>
             <li class="nav-item">
+                <!--suppress HtmlUnknownTarget -->
                 <a class="nav-link" href="{{url_for('documents')}}">Dokumente</a>
             </li>
             <li class="nav-item">
+                <!--suppress HtmlUnknownTarget -->
                 <a class="nav-link" href="{{url_for('data_import')}}">Import</a>
             </li>
             <li class="nav-item">
+                <!--suppress HtmlUnknownTarget -->
                 <a class="nav-link" href="{{url_for('profile')}}">Profile</a>
             </li>
             <li class="nav-item">
+                <!--suppress HtmlUnknownTarget -->
                 <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
             </li>
         </ul>
@@ -45,6 +51,7 @@
             <a href="https://ithoc.de"
                class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
                target="_blank">
+                <!--suppress HtmlUnknownTarget -->
                 <img class="bi me-2" width="40" height="24"
                      src="{{url_for('static', filename='img/Logo.webp')}}" alt="Ithoc logo">
             </a>
