--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--suppress HtmlUnknownTarget -->
+    <link rel="shortcut icon" type="image/png" href="{{url_for('static', filename='favicon.ico')}}"/>
+    <!--suppress HtmlUnknownTarget -->
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
     <title>{% block title %}{% endblock %} - Answer Machine</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
