--- a/templates/documents.html
+++ b/templates/documents.html
@@ -14,7 +14,6 @@
 <table class="table table-striped">
     <thead>
     <tr>
-        <th scope="col">#</th>
         <th scope="col">Kategorie</th>
         <th scope="col">Datei</th>
         <th scope="col">Status</th>
@@ -24,28 +23,36 @@
     <tbody>
     {% for upload_file in upload_files %}
     <tr>
-        <td>{{upload_file.id}}</td>
-        <td>{{upload_file.category}}</td>
+        <td><span class="badge text-bg-light">{{upload_file.category}}</span></td>
         <td>{{upload_file.filename}}</td>
         <td>
             {% if upload_file.status == 'hochgeladen' %}
             <span class="badge text-bg-warning">{{upload_file.status}}</span>
-            {% elif upload_file.status == 'importiert' %}
+            {% elif upload_file.status == 'durchsuchbar' %}
             <span class="badge text-bg-success">{{upload_file.status}}</span>
             {% else %}
             <span class="badge text-bg-light">{{upload_file.status}}</span>
             {% endif %}
         </td>
         <td>
-            <a class="nav-link" href="{{url_for('index', file_id=upload_file.id)}}">
+            {% if upload_file.status == 'hochgeladen' %}
+            <!--suppress HtmlUnknownTarget -->
+            <a class="nav-link" href="{{url_for('index', file_id=upload_file.id)}}"
+               id="action-index"
+               data-bs-toggle="tooltip"
+               data-bs-title="Make this document searchable for questions.">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                     class="bi bi-box-arrow-in-down-right" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                          d="M6.364 2.5a.5.5 0 0 1 .5-.5H13.5A1.5 1.5 0 0 1 15 3.5v10a1.5 1.5 0 0 1-1.5 1.5h-10A1.5 1.5 0 0 1 2 13.5V6.864a.5.5 0 1 1 1 0V13.5a.5.5 0 0 0 .5.5h10a.5.5 0 0 0 .5-.5v-10a.5.5 0 0 0-.5-.5H6.864a.5.5 0 0 1-.5-.5z"/>
-                    <path fill-rule="evenodd"
-                          d="M11 10.5a.5.5 0 0 1-.5.5h-5a.5.5 0 0 1 0-1h3.793L1.146 1.854a.5.5 0 1 1 .708-.708L10 9.293V5.5a.5.5 0 0 1 1 0v5z"/>
+                     class="bi bi-arrow-down-right-square-fill" viewBox="0 0 16 16">
+                    <path d="M14 16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12zM5.904 5.197 10 9.293V6.525a.5.5 0 0 1 1 0V10.5a.5.5 0 0 1-.5.5H6.525a.5.5 0 0 1 0-1h2.768L5.197 5.904a.5.5 0 0 1 .707-.707z"/>
                 </svg>
             </a>
+            {% else %}
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                 class="bi bi-arrow-down-right-square" viewBox="0 0 16 16">
+                <path fill-rule="evenodd"
+                      d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm5.854 3.146a.5.5 0 1 0-.708.708L9.243 9.95H6.475a.5.5 0 1 0 0 1h3.975a.5.5 0 0 0 .5-.5V6.475a.5.5 0 1 0-1 0v2.768L5.854 5.146z"/>
+            </svg>
+            {% endif %}
         </td>
     </tr>
     {% endfor %}
