--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
         <div class="col col-lg-2">&nbsp;</div>
         <div class="col-md-auto">
             <!--suppress HtmlUnknownTarget -->
-            <a class="btn btn-dark btn-lg" href="{{url_for('profile')}}">Anmelden</a>
+            <a class="btn btn-dark btn-lg" href="{{url_for('chat_get')}}">Anmelden</a>
         </div>
         <div class="col col-lg-2">&nbsp;</div>
     </div>
