--- a/templates/documents.html
+++ b/templates/documents.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="{{url_for('index', file_id=upload_file.id)}}"
                id="action-index"
                data-bs-toggle="tooltip"
-               data-bs-title="Make this document searchable for questions.">
+               data-bs-title="Dieses Document in durchsuchbare Inhalte aufnehmen.">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                      class="bi bi-arrow-down-right-square-fill" viewBox="0 0 16 16">
                     <path d="M14 16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12zM5.904 5.197 10 9.293V6.525a.5.5 0 0 1 1 0V10.5a.5.5 0 0 1-.5.5H6.525a.5.5 0 0 1 0-1h2.768L5.197 5.904a.5.5 0 0 1 .707-.707z"/>
@@ -48,7 +48,9 @@
             </a>
             {% else %}
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                 class="bi bi-arrow-down-right-square" viewBox="0 0 16 16">
+                 class="bi bi-arrow-down-right-square" viewBox="0 0 16 16"
+                 data-bs-toggle="tooltip"
+                 data-bs-title="Dieses Document ist durchsuchbar.">
                 <path fill-rule="evenodd"
                       d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm5.854 3.146a.5.5 0 1 0-.708.708L9.243 9.95H6.475a.5.5 0 1 0 0 1h3.975a.5.5 0 0 0 .5-.5V6.475a.5.5 0 1 0-1 0v2.768L5.854 5.146z"/>
             </svg>
