--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,15 @@
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
+
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+{% for message in messages %}
+<div class="alert alert-success" role="alert">{{ message }}</div>
+{% endfor %}
+{% endif %}
+{% endwith %}
+
 <div class="container text-center">
     <div class="row">
         <div class="col col-lg-3">&nbsp;</div>
