--- a/templates/chat.html
+++ b/templates/chat.html
@@ -50,8 +50,12 @@
             </div>
         </form>
     </div>
-    <div class="row justify-content-center">
-        <p>{{answer}}</p>
+    <div class="justify-content-center">
+        <div class="row">
+            <div class="col-6">
+                <p>{{answer}}</p>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
