--- a/templates/chat.html
+++ b/templates/chat.html
@@ -11,49 +11,66 @@
 {% endblock %}
 
 {% block content %}
-<div class="container mt-3">
-
+<div class="container">
     <div class="justify-content-center">
         <!--suppress HtmlUnknownTarget -->
-        <form action="{{url_for('chat_post')}}" method="POST">
-            <div class="row">
-                <div class="col-6">
-                    <label for="user_question" class="form-label"></label>
-                    <textarea class="form-control" rows="7" placeholder="Stelle deine Frage ..." id="user_question"
-                              name="user_question">
-</textarea>
-                    <!-- Needs to be placed at the beginning of the line as otherwise there are whitespaces in the textarea -->
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-6">
-                    {% if not answer %}
-                    <div class="input-group">
-                        <select class="form-select" name="category" aria-label="category_label">
-                            {% for category in categories %}
-                            <option value="{{category}}">{{category}}</option>
-                            {% endfor %}
-                        </select>
-                        <button class="btn btn-outline-secondary" type="submit">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                                 class="bi bi-send-fill" viewBox="0 0 16 16">
-                                <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083l6-15Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z"/>
-                            </svg>
-                        </button>
-                    </div>
-                    {% else %}
-                    <div class="d-grid">
-                        <button class="btn btn-outline-secondary" type="submit">Start over</button>
-                    </div>
-                    {% endif %}
-                </div>
-            </div>
-        </form>
-    </div>
-    <div class="justify-content-center">
         <div class="row">
             <div class="col-6">
-                <p>{{answer}}</p>
+                <!--suppress HtmlUnknownTarget -->
+                <form action="{{url_for('chat_post')}}" method="POST">
+                    <div class="row">
+                        <div class="col-12">
+                            <label for="user_question" class="form-label"></label>
+                            <textarea class="form-control" rows="7" placeholder="Stelle deine Frage ..."
+                                      id="user_question"
+                                      name="user_question">{{user_question}}
+</textarea>
+                            <!-- Needs to be placed at the beginning of the line as otherwise there are whitespaces in the textarea -->
+                        </div>
+                    </div>
+                    <div class="row mt-1 mb-3">
+                        <div class="col-12">
+                            {% if not answer %}
+                            <div class="input-group">
+                                <select class="form-select" name="category" aria-label="category_label">
+                                    {% for category in categories %}
+                                    <option value="{{category}}">{{category}}</option>
+                                    {% endfor %}
+                                </select>
+                                <button class="btn btn-outline-secondary" type="submit">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                                         class="bi bi-send-fill" viewBox="0 0 16 16">
+                                        <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083l6-15Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z"/>
+                                    </svg>
+                                </button>
+                            </div>
+                            {% else %}
+                            <!--suppress HtmlUnknownTarget -->
+                            <a class="nav-link" href="{{url_for('chat_get')}}"
+                               data-bs-toggle="tooltip"
+                               data-bs-title="Neue Frage stellen">
+                                <div class="d-grid gap-2">
+                                    <button class="btn btn-outline-secondary" type="button">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                             fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
+                                            <path fill-rule="evenodd"
+                                                  d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/>
+                                            <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/>
+                                        </svg>
+                                    </button>
+                                </div>
+                            </a>
+                            {% endif %}
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="col-6 mt-4 mb-3">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="card card-body">{{answer}}</div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
