--- a/templates/documents.html
+++ b/templates/documents.html
@@ -11,53 +11,132 @@
 {% endblock %}
 
 {% block content %}
-<table class="table table-striped">
-    <thead>
-    <tr>
-        <th scope="col">Kategorie</th>
-        <th scope="col">Datei</th>
-        <th scope="col">Status</th>
-        <th scope="col">Aktion</th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for upload_file in upload_files %}
-    <tr>
-        <td><span class="badge text-bg-light">{{upload_file.category}}</span></td>
-        <td>{{upload_file.filename}}</td>
-        <td>
-            {% if upload_file.status == 'hochgeladen' %}
-            <span class="badge text-bg-warning">{{upload_file.status}}</span>
-            {% elif upload_file.status == 'durchsuchbar' %}
-            <span class="badge text-bg-success">{{upload_file.status}}</span>
-            {% else %}
-            <span class="badge text-bg-light">{{upload_file.status}}</span>
-            {% endif %}
-        </td>
-        <td>
-            {% if upload_file.status == 'hochgeladen' %}
-            <!--suppress HtmlUnknownTarget -->
-            <a class="nav-link" href="{{url_for('index', file_id=upload_file.id)}}"
-               id="action-index"
-               data-bs-toggle="tooltip"
-               data-bs-title="Dieses Document in durchsuchbare Inhalte umwandeln.">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                     class="bi bi-arrow-down-right-square-fill" viewBox="0 0 16 16">
-                    <path d="M14 16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12zM5.904 5.197 10 9.293V6.525a.5.5 0 0 1 1 0V10.5a.5.5 0 0 1-.5.5H6.525a.5.5 0 0 1 0-1h2.768L5.197 5.904a.5.5 0 0 1 .707-.707z"/>
-                </svg>
-            </a>
-            {% else %}
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                 class="bi bi-arrow-down-right-square" viewBox="0 0 16 16"
-                 data-bs-toggle="tooltip"
-                 data-bs-title="Dieses Document ist durchsuchbar.">
-                <path fill-rule="evenodd"
-                      d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm5.854 3.146a.5.5 0 1 0-.708.708L9.243 9.95H6.475a.5.5 0 1 0 0 1h3.975a.5.5 0 0 0 .5-.5V6.475a.5.5 0 1 0-1 0v2.768L5.854 5.146z"/>
-            </svg>
-            {% endif %}
-        </td>
-    </tr>
-    {% endfor %}
-    </tbody>
-</table>
+<div class="container mt-3">
+    <div class="justify-content-center">
+        <div class="row">
+            <div class="col-12">
+
+                <button type="button" class="btn btn-outline-secondary"
+                        data-bs-toggle="modal" data-bs-target="#import_modal">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="16" fill="currentColor"
+                         class="bi bi-file-earmark-plus-fill" viewBox="0 0 16 16">
+                        <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zM8.5 7v1.5H10a.5.5 0 0 1 0 1H8.5V11a.5.5 0 0 1-1 0V9.5H6a.5.5 0 0 1 0-1h1.5V7a.5.5 0 0 1 1 0z"/>
+                    </svg>
+                </button>
+                <!-- Upload modal dialog -->
+                <div class="modal fade" id="import_modal" tabindex="-1"
+                     aria-labelledby="import_modal_label" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="import_modal_label">Neues Dokument hochladen</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Abbrechen"></button>
+                            </div>
+                            <!--suppress HtmlUnknownTarget -->
+                            <form action="{{url_for('upload')}}" method="POST" enctype="multipart/form-data"
+                                  id="upload_form" name="upload_form">
+                                <div class="modal-body">
+                                    {% if message %}
+                                    <div class="alert alert-warning" role="alert">
+                                        Bitte wähle ein Dokument aus.
+                                    </div>
+                                    {% endif %}
+                                    <div class="mb-0">
+                                        <input class="form-control" type="file" id="file_upload"
+                                               accept="application/pdf" name="file">
+                                    </div>
+                                    <div class="mb-0">
+                                        <label for="file_category" class="form-label"></label>
+                                        <div class="input-group">
+                                            <span class="input-group-text" id="basic-addon3">Kategorie</span>
+                                            <select class="form-select" name="category" id="file_category"
+                                                    aria-label="category_label">
+                                                <option value="{{category}}"></option>
+                                                {% for category in categories %}
+                                                <option value="{{category}}">{{category}}</option>
+                                                {% endfor %}
+                                            </select>
+                                            <!--suppress HtmlUnknownTarget -->
+                                            <a class="nav-link" href="{{url_for('categories')}}"
+                                               data-bs-toggle="tooltip"
+                                               data-bs-title="Neue Kategorie anlegen">
+                                                <button type="button" class="btn btn-outline-secondary"
+                                                        data-bs-dismiss="modal">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                         fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+                                                        <path fill-rule="evenodd"
+                                                              d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
+                                                    </svg>
+                                                </button>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Abbrechen
+                                    </button>
+                                    <button type="submit" class="btn btn-primary">Hochladen</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th scope="col">Kategorie</th>
+                        <th scope="col">Datei</th>
+                        <th scope="col">Status</th>
+                        <th scope="col">Aktion</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for upload_file in upload_files %}
+                    <tr>
+                        <td><span class="badge text-bg-light">{{upload_file.category}}</span></td>
+                        <td>{{upload_file.filename}}</td>
+                        <td>
+                            {% if upload_file.status == 'hochgeladen' %}
+                            <span class="badge text-bg-warning">{{upload_file.status}}</span>
+                            {% elif upload_file.status == 'durchsuchbar' %}
+                            <span class="badge text-bg-success">{{upload_file.status}}</span>
+                            {% else %}
+                            <span class="badge text-bg-light">{{upload_file.status}}</span>
+                            {% endif %}
+                        </td>
+                        <td>
+                            {% if upload_file.status == 'hochgeladen' %}
+                            <!--suppress HtmlUnknownTarget -->
+                            <a class="nav-link" href="{{url_for('index', file_id=upload_file.id)}}"
+                               id="action-index"
+                               data-bs-toggle="tooltip"
+                               data-bs-title="Dieses Document in durchsuchbare Inhalte umwandeln.">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                     class="bi bi-arrow-down-right-square-fill" viewBox="0 0 16 16">
+                                    <path d="M14 16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12zM5.904 5.197 10 9.293V6.525a.5.5 0 0 1 1 0V10.5a.5.5 0 0 1-.5.5H6.525a.5.5 0 0 1 0-1h2.768L5.197 5.904a.5.5 0 0 1 .707-.707z"/>
+                                </svg>
+                            </a>
+                            {% else %}
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                 class="bi bi-arrow-down-right-square" viewBox="0 0 16 16"
+                                 data-bs-toggle="tooltip"
+                                 data-bs-title="Dieses Document ist durchsuchbar.">
+                                <path fill-rule="evenodd"
+                                      d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm5.854 3.146a.5.5 0 1 0-.708.708L9.243 9.95H6.475a.5.5 0 1 0 0 1h3.975a.5.5 0 0 0 .5-.5V6.475a.5.5 0 1 0-1 0v2.768L5.854 5.146z"/>
+                            </svg>
+                            {% endif %}
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
