--- a/templates/documents.html
+++ b/templates/documents.html
@@ -113,7 +113,8 @@
                                 <div class="col-6">
                                     {% if upload_file.status == 'hochgeladen' %}
                                     <!--suppress HtmlUnknownTarget, JSUnresolvedReference -->
-                                    <a class="nav-link index-spinner" href="{{url_for('index', file_id=upload_file.id)}}"
+                                    <a class="nav-link index-spinner"
+                                       href="{{url_for('index', file_id=upload_file.id)}}"
                                        data-bs-toggle="tooltip"
                                        data-bs-title="Dieses Document in durchsuchbare Inhalte umwandeln.">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -123,10 +124,12 @@
                                         </svg>
                                     </a>
                                     {% else %}
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                         fill="currentColor"
                                          class="bi bi-arrow-down-right-square index-spinner" viewBox="0 0 16 16"
                                          data-bs-toggle="tooltip"
-                                         data-bs-title="Dieses Document ist durchsuchbar.">
+                                         data-bs-title="Dieses Document ist durchsuchbar."
+                                         style="pointer-events: none;">
                                         <path fill-rule="evenodd"
                                               d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm5.854 3.146a.5.5 0 1 0-.708.708L9.243 9.95H6.475a.5.5 0 1 0 0 1h3.975a.5.5 0 0 0 .5-.5V6.475a.5.5 0 1 0-1 0v2.768L5.854 5.146z"/>
                                     </svg>
