Update tooltip text to "Dieses Dokument in durchsuchbaren Inhalt umwandeln."

--- a/templates/documents.html
+++ b/templates/documents.html
@@ -116,7 +116,7 @@
                                     <a class="nav-link index-spinner"
                                        href="{{url_for('index', file_id=upload_file.id)}}"
                                        data-bs-toggle="tooltip"
-                                       data-bs-title="Dieses Document in durchsuchbare Inhalte umwandeln.">
+                                       data-bs-title="Dieses Dokument in durchsuchbaren Inhalt umwandeln.">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                              fill="currentColor"
                                              class="bi bi-arrow-down-right-square-fill" viewBox="0 0 16 16">
